Added advantages ::before elements at index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </nav>
           <!-- блок с емейлом и номером телефона -->
           <div class="contacts">
-            <a href="mailto:info@devstudio.com" class="link"
+            <a href="mailto:info@devstudio.com" class="link icon-email"
               >info@devstudio.com</a
             >
             <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
@@ -71,28 +71,28 @@
           <h2 class="visually-hidden">Наши преимущества</h2>
 
           <ul class="advantages">
-            <li class="advantages-list">
+            <li class="advantages-list icon-nasa-link">
               <h3 class="advantages-title">Внимание к деталям</h3>
               <p class="advantages-text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="advantages-list">
+            <li class="advantages-list icon-clock">
               <h3 class="advantages-title">Пунктуальность</h3>
               <p class="advantages-text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="advantages-list">
+            <li class="advantages-list icon-diagram">
               <h3 class="advantages-title">Планирование</h3>
               <p class="advantages-text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="advantages-list">
+            <li class="advantages-list icon-astronaut">
               <h3 class="advantages-title">Современные технологии</h3>
               <p class="advantages-text">
                 Значимость этих проблем настолько очевидна, что реализация
