--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
           <nav class="nav-flex">
             <!-- логотип -->
             <a href="./index.html" class="logo">
-              <span class="web">Web</span
-              ><span class="studio-black">Studio</span>
+              <span class="web">Web</span><span class="studio-black">Studio</span>
             </a>
 
             <!-- навигация в шапке -->
@@ -42,10 +41,19 @@
           </nav>
           <!-- блок с емейлом и номером телефона -->
           <div class="contacts">
-            <a href="mailto:info@devstudio.com" class="link icon-email"
-              >info@devstudio.com</a
-            >
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <a href="mailto:info@devstudio.com" class="link">
+              <svg class="contacts-icon" width="16" height="12">
+                <use href="./images/symbols.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
+
+            <a href="tel:+380961111111" class="link">
+              <svg class="contacts-icon" width="10" height="16">
+                <use href="./images/symbols.svg#icon-tel"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </div>
         </div>
       </div>
@@ -74,29 +82,25 @@
             <li class="advantages-list icon-nasa-link">
               <h3 class="advantages-title">Внимание к деталям</h3>
               <p class="advantages-text">
-                Идейные соображения, а также начало повседневной работы по
-                формированию позиции.
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li class="advantages-list icon-clock">
               <h3 class="advantages-title">Пунктуальность</h3>
               <p class="advantages-text">
-                Задача организации, в особенности же рамки и место обучения
-                кадров влечет за собой.
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
             <li class="advantages-list icon-diagram">
               <h3 class="advantages-title">Планирование</h3>
               <p class="advantages-text">
-                Равным образом консультация с широким активом в значительной
-                степени обуславливает.
+                Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
             <li class="advantages-list icon-astronaut">
               <h3 class="advantages-title">Современные технологии</h3>
               <p class="advantages-text">
-                Значимость этих проблем настолько очевидна, что реализация
-                плановых заданий.
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
               </p>
             </li>
           </ul>
