Fixed ADV section, added SVG-inline

--- a/index.html
+++ b/index.html
@@ -79,25 +79,45 @@
           <h2 class="visually-hidden">Наши преимущества</h2>
 
           <ul class="advantages">
-            <li class="advantages-list icon-nasa-link">
+            <li class="advantages-list">
+              <div class="advantages-box">
+                <svg width="70" height="70">
+                  <use href="./images/symbols.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="advantages-title">Внимание к деталям</h3>
               <p class="advantages-text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
-            <li class="advantages-list icon-clock">
+            <li class="advantages-list">
+              <div class="advantages-box">
+                <svg width="70" height="70">
+                  <use href="./images/symbols.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="advantages-title">Пунктуальность</h3>
               <p class="advantages-text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
-            <li class="advantages-list icon-diagram">
+            <li class="advantages-list">
+              <div class="advantages-box">
+                <svg width="70" height="70">
+                  <use href="./images/symbols.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="advantages-title">Планирование</h3>
               <p class="advantages-text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
-            <li class="advantages-list icon-astronaut">
+            <li class="advantages-list">
+              <div class="advantages-box">
+                <svg width="70" height="70">
+                  <use href="./images/symbols.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="advantages-title">Современные технологии</h3>
               <p class="advantages-text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
