--- a/portfolio.html
+++ b/portfolio.html
@@ -23,8 +23,7 @@
           <nav class="nav-flex">
             <!-- логотип -->
             <a href="./index.html" class="logo">
-              <span class="web">Web</span
-              ><span class="studio-black">Studio</span>
+              <span class="web">Web</span><span class="studio-black">Studio</span>
             </a>
 
             <!-- навигация в шапке -->
@@ -42,10 +41,19 @@
           </nav>
           <!-- блок с емейлом и номером телефона -->
           <div class="contacts">
-            <a href="mailto:info@devstudio.com" class="link"
-              >info@devstudio.com</a
-            >
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <a href="mailto:info@devstudio.com" class="link">
+              <svg class="contacts-icon" width="16" height="12">
+                <use href="./images/symbols.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
+
+            <a href="tel:+380961111111" class="link">
+              <svg class="contacts-icon" width="10" height="16">
+                <use href="./images/symbols.svg#icon-tel"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </div>
         </div>
       </div>
@@ -105,9 +113,7 @@
                   height="294"
                 />
                 <div class="text-block">
-                  <h2 class="examples-title">
-                    Постер New Orlean vs Golden Star
-                  </h2>
+                  <h2 class="examples-title">Постер New Orlean vs Golden Star</h2>
                   <p class="examples-text">Дизайн</p>
                 </div>
               </a>
