Added svg to team section

--- a/index.html
+++ b/index.html
@@ -177,6 +177,28 @@
               />
               <h3 class="list-title">Игорь Демьяненко</h3>
               <p class="list-text" lang="en">Product Designer</p>
+              <div class="social-block">
+                <a class="social-link" href="https://www.instagram.com">
+                  <svg class="social-svg" width="20" height="20">
+                    <use href="./images/symbols.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+                <a class="social-link" href="https://twitter.com">
+                  <svg class="social-svg" width="20" height="20">
+                    <use href="./images/symbols.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+                <a class="social-link" href="https://www.facebook.com">
+                  <svg class="social-svg" width="20" height="20">
+                    <use href="./images/symbols.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+                <a class="social-link" href="https://www.linkedin.com">
+                  <svg class="social-svg" width="20" height="20">
+                    <use href="./images/symbols.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </div>
             </li>
             <li class="list-item">
               <img
@@ -188,6 +210,28 @@
               />
               <h3 class="list-title">Ольга Репина</h3>
               <p class="list-text" lang="en">Frontend Developer</p>
+              <div class="social-block">
+                <a class="social-link" href="https://www.instagram.com">
+                  <svg class="social-svg" width="20" height="20">
+                    <use href="./images/symbols.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+                <a class="social-link" href="https://twitter.com">
+                  <svg class="social-svg" width="20" height="20">
+                    <use href="./images/symbols.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+                <a class="social-link" href="https://www.facebook.com">
+                  <svg class="social-svg" width="20" height="20">
+                    <use href="./images/symbols.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+                <a class="social-link" href="https://www.linkedin.com">
+                  <svg class="social-svg" width="20" height="20">
+                    <use href="./images/symbols.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </div>
             </li>
             <li class="list-item">
               <img
@@ -199,6 +243,28 @@
               />
               <h3 class="list-title">Николай Тарасов</h3>
               <p class="list-text" lang="en">Marketing</p>
+              <div class="social-block">
+                <a class="social-link" href="https://www.instagram.com">
+                  <svg width="20" height="20">
+                    <use href="./images/symbols.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+                <a class="social-link" href="https://twitter.com">
+                  <svg width="20" height="20">
+                    <use href="./images/symbols.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+                <a class="social-link" href="https://www.facebook.com">
+                  <svg width="20" height="20">
+                    <use href="./images/symbols.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+                <a class="social-link" href="https://www.linkedin.com">
+                  <svg width="20" height="20">
+                    <use href="./images/symbols.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </div>
             </li>
             <li class="list-item">
               <img
@@ -210,6 +276,28 @@
               />
               <h3 class="list-title">Михаил Ермаков</h3>
               <p class="list-text" lang="en">UI Designer</p>
+              <div class="social-block">
+                <a class="social-link" href="https://www.instagram.com">
+                  <svg width="20" height="20">
+                    <use href="./images/symbols.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+                <a class="social-link" href="https://twitter.com">
+                  <svg width="20" height="20">
+                    <use href="./images/symbols.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+                <a class="social-link" href="https://www.facebook.com">
+                  <svg width="20" height="20">
+                    <use href="./images/symbols.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+                <a class="social-link" href="https://www.linkedin.com">
+                  <svg width="20" height="20">
+                    <use href="./images/symbols.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </div>
             </li>
           </ul>
         </div>
