--- a/portfolio.html
+++ b/portfolio.html
@@ -231,16 +231,48 @@
     <!-- футер сайта -->
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo">
-          <span class="web">Web</span><span class="studio-white">Studio</span>
-        </a>
+        <!-- Общий блок для футер флекса -->
+        <div class="footer-flex">
+          <!-- блок ЛОГО + адрес, эмейл, телефон -->
+          <div class="footer-address-block">
+            <a href="./index.html" class="logo">
+              <span class="web">Web</span><span class="studio-white">Studio</span>
+            </a>
+            <address class="company-address">
+              <span class="map">г. Киев, пр-т Леси Украинки, 26</span> <br />
+              <a href="mailto:info@example.com" class="link">info@example.com</a>
+              <br />
+              <a href="tel:+380991111111" class="link">+38 099 111 11 11</a> <br />
+            </address>
+          </div>
 
-        <address class="company-address">
-          <span class="map">г. Киев, пр-т Леси Украинки, 26</span> <br />
-          <a href="mailto:info@example.com" class="link">info@example.com</a>
-          <br />
-          <a href="tel:+380991111111" class="link">+38 099 111 11 11</a> <br />
-        </address>
+          <!-- блок присоединяйтесь к соц сетям -->
+          <div class="footer-social">
+            <b class="title">присоединяйтесь</b>
+            <div class="social-block">
+              <a class="social-link" href="https://www.instagram.com">
+                <svg width="20" height="20">
+                  <use href="./images/symbols.svg#icon-instagram"></use>
+                </svg>
+              </a>
+              <a class="social-link" href="https://twitter.com">
+                <svg width="20" height="20">
+                  <use href="./images/symbols.svg#icon-twitter"></use>
+                </svg>
+              </a>
+              <a class="social-link" href="https://www.facebook.com">
+                <svg width="20" height="20">
+                  <use href="./images/symbols.svg#icon-facebook"></use>
+                </svg>
+              </a>
+              <a class="social-link" href="https://www.linkedin.com">
+                <svg width="20" height="20">
+                  <use href="./images/symbols.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
